--- a/style.css
+++ b/style.css
@@ -63,9 +63,10 @@ main>.container {
 .gap-10 {
     gap: 10px;
 }
+
 /*HTML elements*/
 h1 {
-    font-size : 30px;
+    font-size: 30px;
     text-align: center;
     color: var(--dark);
 }
@@ -81,6 +82,11 @@ h3 {
     color: var(--dark);
 }
 
+h3>a,
+h2>a {
+    color: var(--dark);
+}
+
 section {
     background-color: var(--background-tsp);
     border-radius: 15px;
@@ -88,6 +94,7 @@ section {
     margin: 20px auto 0px auto;
     overflow-x: hidden;
     backdrop-filter: blur(2px);
+    flex-flow: column;
 }
 
 body {
@@ -98,30 +105,76 @@ body {
 
 main {
     background: url('assets/city.png');
-    background-position: 50% -25%;;
+    background-position: 50% -25%;
+    ;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
 }
 
+::backdrop{
+    color: var(--dark);
+    opacity: 0.8;
+}
+
+dialog {
+    margin: auto;
+    width: 75%;
+    max-height: 75%;
+    border: 1px solid var(--text-color);
+    background: var(--background-color);
+    border-radius: 15px;
+}
+dialog input {
+    margin-bottom: 10px;
+}
+
+dialog textarea {
+    height: fit-content;
+    min-height: 200px;
+}
+
 /*forms*/
+button.close {
+    height: 15px;
+    width: 15px;
+    object-fit: cover;
+    position: relative;
+    bottom: 5px;
+    background: none;
+    padding: 0px;
+    margin: 10px;
+    border-radius: 0px;
+}
+
+button.close:focus{
+    box-shadow: none;
+}
+
+button.close>svg>path:active{
+    fill: var(--text-color);
+}
+
 .signForm {
     width: 100%;
 }
 
-input, textarea {
+input,
+textarea {
     width: 100%;
     border: 1px solid var(--text-color);
     background: var(--background-color);
     border-radius: 5px;
 }
 
-.miniInput{
-    width: 48%;
+.miniInput {
+    width: 96%;
+    margin: auto;
+
 }
 
-.bigInput{
-    width : 100%;
+.bigInput {
+    width: 100%;
 }
 
 button {
@@ -138,7 +191,7 @@ td button {
 }
 
 button:focus {
-    box-shadow : inset 0px 0px 2px 2px rgba(0,0,0,0.2);
+    box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .message {
@@ -148,15 +201,19 @@ button:focus {
 }
 
 /*navbar + footer*/
-#nav, footer {
+#nav,
+footer {
     background: var(--dark);
     font-weight: bold;
 }
-#nav a, footer a {
+
+#nav a,
+footer a {
     color: var(--accent-1);
 }
 
-#nav ul, #nav p {
+#nav ul,
+#nav p {
     padding-top: 5px;
 }
 
@@ -164,11 +221,12 @@ footer>div {
     justify-content: space-evenly;
 }
 
-footer>div>*{
+footer>div>* {
     width: 30%;
 }
 
-footer p, footer a{
+footer p,
+footer a {
     font-size: 13px;
     font-weight: normal;
 }
@@ -214,12 +272,12 @@ footer h3 {
     max-width: 100vw;
     position: relative;
     left: -20px;
-    border-bottom : 1px solid var(--text-color);
+    border-bottom: 1px solid var(--text-color);
 }
 
 .dark {
     background: var(--accent-1);
-    border-bottom : none;
+    border-bottom: none;
     margin-top: 5px;
 }
 
@@ -232,4 +290,15 @@ select {
     border-radius: 5px;
     background: var(--light);
     border: 1px solid var(--text-color);
+}
+
+
+@media (min-width: 640px) {
+    section {
+        flex-flow: row wrap;
+    }
+
+    .miniInput {
+        width: 47%;
+    }
 }
