--- a/style.css
+++ b/style.css
@@ -112,11 +112,6 @@ main {
     background-attachment: fixed;
 }
 
-::backdrop{
-    color: var(--dark);
-    opacity: 0.8;
-}
-
 dialog {
     margin: auto;
     width: 75%;
@@ -125,6 +120,7 @@ dialog {
     background: var(--background-color);
     border-radius: 15px;
 }
+
 dialog input {
     margin-bottom: 10px;
 }
@@ -132,6 +128,11 @@ dialog input {
 dialog textarea {
     height: fit-content;
     min-height: 200px;
+}
+
+:backdrop{
+    color: var(--dark);
+    opacity: 1;
 }
 
 /*forms*/
@@ -234,6 +235,28 @@ footer a {
 footer h3 {
     color: var(--light);
 }
+
+#logo{
+    margin: 0px 0px 0px 10px;
+    padding: 0px;
+    background: transparent;
+    width: 50px;
+    height: 50px;
+}
+
+#logo:focus{
+    box-shadow: none;
+}
+
+#logo:hover{
+    box-shadow: 0px 0px 5px 2px var(--light);
+    animation-delay: 0.5s;
+}
+
+/* #links{
+    width: 0px;
+    display: none;
+} */
 
 /*profile*/
 #user_info {
